// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddLogicalCondition component should not render an option to add ELSE because there is already an ELSE 1`] = `
<span
  class=""
  style="min-height: 32px; align-items: center;"
>
  <div
    class="btn-group"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="ControlStructureButton dropdown-toggle btn btn-secondary"
      type="button"
    >
      bar
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Add 
        <b>
          AND
        </b>
         condition
      </button>
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Add 
        <b>
          OR
        </b>
         condition
      </button>
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <i
          class="material-icons red mr-1"
        >
          delete
        </i>
        Delete node
      </button>
    </div>
  </div>
</span>
`;

exports[`AddLogicalCondition component should render an option to add AND because existing operator is already AND  1`] = `
<span
  class=""
  style="min-height: 32px; align-items: center;"
>
  <div
    class="btn-group"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="ControlStructureButton dropdown-toggle btn btn-secondary"
      type="button"
    >
      bar
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Add 
        <b>
          AND
        </b>
         condition
      </button>
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Add 
        <b>
          ELSE
        </b>
         statement
      </button>
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <i
          class="material-icons red mr-1"
        >
          delete
        </i>
        Delete node
      </button>
    </div>
  </div>
</span>
`;

exports[`AddLogicalCondition component should render an option to add OR because existing operator is already OR  1`] = `
<span
  class=""
  style="min-height: 32px; align-items: center;"
>
  <div
    class="btn-group"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="ControlStructureButton dropdown-toggle btn btn-secondary"
      type="button"
    >
      bar
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Add 
        <b>
          OR
        </b>
         condition
      </button>
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Add 
        <b>
          ELSE
        </b>
         statement
      </button>
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <i
          class="material-icons red mr-1"
        >
          delete
        </i>
        Delete node
      </button>
    </div>
  </div>
</span>
`;

exports[`AddLogicalCondition component should render empty condition 1`] = `
<span
  class=""
  style="min-height: 32px; align-items: center;"
>
  <div
    class="btn-group"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="ControlStructureButton dropdown-toggle btn btn-secondary"
      type="button"
    >
      bar
    </button>
    <div
      aria-hidden="true"
      class="dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Add 
        <b>
          AND
        </b>
         condition
      </button>
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Add 
        <b>
          OR
        </b>
         condition
      </button>
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Add 
        <b>
          ELSE
        </b>
         statement
      </button>
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <i
          class="material-icons red mr-1"
        >
          delete
        </i>
        Delete node
      </button>
    </div>
  </div>
</span>
`;
